--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,8 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$dark-red: #d50d2e;
+$golden-amber: #FFC107;
+$slate-grey: #607D8B;
+$navy-blue: #1A237E;
+$dark-amber: #FFB300;
