--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,11 +12,12 @@ $font-size-base:         1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $blue;
+$primary:    $golden-amber;
 $success:    $green;
-$info:       $yellow;
-$danger:     $red;
+$info:       $navy-blue;
+$danger:     $dark-red;
 $warning:    $orange;
+$secondary:  $slate-grey;
 
 // Buttons & inputs' radius
 $border-radius-sm:            .0625rem;
