--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -5,6 +5,6 @@
 
     <%= f.input :comment %>
     <div class="d-flex justify-content-between">
-      <%= f.button :submit, "Add Movie", class: "btn btn-primary" %>
+      <%= f.button :submit, "Add Movie", class: "btn btn-primary rounded-pill" %>
     </div>
   <% end %>
