--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,3 +1,8 @@
-<div class="main d-flex flex-column justify-content-center align-items-center">
-<%= render "form" %>
+<div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+  <div class="card shadow-sm p-4" style="width: 400px;">
+    <h5 class="card-title text-center mb-3">Add a List</h5>
+    <div class="card-body">
+      <%= render "form" %>
+    </div>
+  </div>
 </div>
