--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -2,4 +2,5 @@
 <%= f.input :name%>
 <%= f.input :photo, as: :file %>
 <%= f.button :submit, "Add List", class: "btn btn-primary rounded-pill" %>
+<%= link_to "Cancel", request.referer || lists_path, class: "btn btn-secondary" %>
 <% end %>
