--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,14 +1,19 @@
-<div class="main d-flex flex-column justify-content-center align-items-center">
+<div class="container py-5">
 
-  <h1>This is a movies view</h1>
+    <div class="d-flex gap-2 mb-3">
+      <h1 class="mb-4">Movies, ranked by number of lists</h1>
+      <p><%= link_to "See all lists", lists_path, class: "btn btn-primary rounded-pill" %></p>
+    </div>
 
-  <div class="container">
+  <% if @movies.any? %>
     <div class="row">
-
       <% @movies.each do |movie| %>
-        <%= render "moviecard", movie: movie, save_icon: true %>
-      <% end %>
 
-    <div>
-  <div>
-<div>
+        <%= render "movies/moviecard", movie: movie %>
+
+      <% end %>
+    </div>
+  <% else %>
+    <p class="text-muted">No movies found.</p>
+  <% end %>
+</div>
