--- a/app/views/lists/_listcard.html.erb
+++ b/app/views/lists/_listcard.html.erb
@@ -11,7 +11,7 @@
 
             <%= button_to list_path(list),
                 method: :delete,
-                class: "position-absolute top-0 end-0 m-2 px-1 rounded-3 border-0 bg-danger text-white z-3",
+                class: "position-absolute top-0 end-0 m-2 px-1 rounded-3 border-0 bg-danger text-white z-3 mobile-action-btn",
                 form: { data: { turbo_confirm: 'Are you sure?' } } do %>
               <i class="fa-solid fa-trash"></i>
             <% end %>
