--- a/app/views/movies/_moviecard.html.erb
+++ b/app/views/movies/_moviecard.html.erb
@@ -11,7 +11,7 @@
         <% if existing_bookmark %>
           <%= button_to bookmark_path(existing_bookmark),
                 method: :delete,
-                class: "position-absolute top-0 end-0 m-2 px-1 rounded-3 border-0 bg-light text-danger",
+                class: "position-absolute top-0 end-0 m-2 px-1 rounded-3 border-0 bg-light text-danger mobile-action-btn",
                 form: { data: { turbo_confirm: "Remove this movie from the list?" } } do %>
             <i class="fa-solid fa-bookmark"></i>
           <% end %>
@@ -19,7 +19,7 @@
           <%= button_to list_bookmarks_path(@list),
                 params: { bookmark: { movie_id: movie.id } },
                 method: :post,
-                class: "position-absolute top-0 end-0 m-2 px-1 rounded-3 border-0 bg-light text-primary" do %>
+                class: "position-absolute top-0 end-0 m-2 px-1 rounded-3 border-0 bg-light text-primary mobile-action-btn" do %>
             <i class="fa-regular fa-bookmark"></i>
           <% end %>
         <% end %>
@@ -28,7 +28,7 @@
       <% if bookmark %>
         <%= button_to bookmark_path(bookmark),
               method: :delete,
-              class: "position-absolute top-0 end-0 m-2 px-1 rounded-3 border-0 bg-danger text-white",
+              class: "position-absolute top-0 end-0 m-2 px-1 rounded-3 border-0 bg-danger text-white mobile-action-btn",
               form: { data: { turbo_confirm: "Are you sure?" } } do %>
           <i class="fa-solid fa-trash"></i>
         <% end %>
