--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -54,7 +54,8 @@
                 class="carousel slide"
                 data-bs-ride="false"
                 data-bs-touch="false"
-                data-bs-interval="false">
+                data-bs-interval="false"
+                data-turbo="false">
                 <div class="carousel-inner">
 
                   <% urls.each_with_index do |url, i| %>
