added series and login

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,9 +1,8 @@
-<div class="main d-flex flex-column justify-content-center align-items-center">
+<div class="main d-flex flex-column justify-content-center align-items-center my-4">
   <h1>These are all the lists</h1>
 
   <div class="d-flex gap-2 mb-3">
     <%= link_to "Add a list", new_list_path, class: "btn btn-primary rounded-pill" %>
-    <%= link_to "Movie Ranking", movies_path, class: "btn btn-primary rounded-pill" %>
   </div>
 
 
