--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -1,5 +1,5 @@
-<!-- app/views/lists/_search_form.html.erb -->
-<%= form_with url: list_search_movies_path(@list), method: :get, local: true, class: "d-flex mb-4" do |f| %>
-  <%= f.text_field :query, placeholder: "Search for a movie", class: "form-control me-2" %>
+<%= form_with url: list_search_items_path(@list), method: :get, local: true, class: "d-flex mb-4" do |f| %>
+  <%= f.text_field :query, placeholder: "Search for a title", class: "form-control me-2" %>
+  <%= f.select :type, [["Movie", "movie"], ["Series", "tv"]], {}, class: "form-select me-2" %>
   <%= f.submit "Search", class: "btn btn-primary" %>
 <% end %>
